# log-reader

./: log-reader.cabal
LogReader/: AppianLog.hs  Data.hs  FreeLog.hs  LogReader.hs  Watcher.hs  freeLog.hs  lensTest.hs  tests.hs
LogReader/UI/: bower.json
LogReader/UI/src/: Bootstrap.purs  Data.purs
LogReader/UI/test/: UI.purs
templates/: logFile.hamlet  logFile.julius
