name:              log-reader
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: .
    exposed-modules: LogReader.LogReader
                     LogReader.Data
    other-modules:   LogReader.Watcher

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    if os(windows)
        cpp-options:   -DWINDOWS

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base
                 , yesod
                 , yesod-core
                 , classy-prelude-yesod
                 , directory
                 , containers
                 , aeson
                 , yesod-websockets
                 , lens
                 , fsnotify
                 , filepath
                 , conduit-combinators
                 , async
                 , classy-prelude
                 , conduit
                 , yaml
                 , text
                 , lifted-base
                 , shakespeare
                 , suite-settings